<resources>
    <string name="app_name" translatable="false">AppEercicioSemEquipamento</string>
    <string name="title_activity_main" translatable="false">Exercícios sem Equipamentos</string>
    <string name="title_activity_categorias">Abdómen, peito e braço</string>
    <string name="selecionar">Option</string>
    <string name="escolher">Select</string>
    <string name="adicionar">Add</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Delete</string>
    <string name="title_activity_escolher">Select</string>
    <string name="title_activity_adicionar">Add</string>
    <string name="adicionar_categorias">Add Categories</string>
    <string name="nome">Name</string>
    <string name="breve_descricao">Short Description</string>
    <string name="duracao">Duration (min) / Day</string>
    <string name="guardar">Save</string>
    <string name="title_activity_editar">Edit</string>
    <string name="editar_categorias">Edit Categories</string>
    <string name="nome1">Name</string>
    <string name="title_activity_eliminar">Delete</string>
    <string name="duracao_min_dia">Duration (min) / Day</string>
    <string name="cancelar_Editar">Cancel</string>
    <string name="editar2">Edit</string>
    <string name="eliminar_categorias">Delete Categories</string>
    <string name="cancelar_Eliminar">Cancel</string>
    <string name="eliminar2">Delete</string>
    <string name="categories">Categories</string>
    <string name="Abdomen">Abdómen, peito e braço</string>
    <string name="pernas">Pernas e Glúteos</string>
    <string name="corpo_inteiro">Corpo inteiro</string>
    <string name="title_activity_categoria1">Pernas e Glúteos</string>
    <string name="EscolherPern">Escolher</string>
    <string name="adicionarPern">Adicionar</string>
    <string name="editarPern">Editar</string>
    <string name="eliminarPern">Eliminar</string>
    <string name="imagePrinc">imagem</string>
    <string name="title_activity_escolher1">Escolher1Activity</string>
    <string name="escolher_categoriaPern">Escolher Categoria</string>
    <string name="avancarPern">Avançar</string>
    <string name="cancelarPern">Cancelar</string>
    <string name="escolher_categoriaAb">Escolher Categoria</string>
    <string name="cancelarAb">Cancelar</string>
    <string name="avancarAb">Avançar</string>
    <string name="title_activity_adicionar1">Adicionar1Activity</string>
    <string name="guardarPern">Guardar</string>
    <string name="cancelarAddPern">Cancelar</string>
    <string name="title_activity_editar1">Editar1Activity</string>
    <string name="cancelarEditPern">Cancelar</string>
    <string name="editarEditPern">Editar</string>
    <string name="title_activity_eliminar1">Eliminar1Activity</string>
    <string name="cancelarElimPernas">Cancelar</string>
    <string name="eliminarElimPern">Eliminar</string>
    <string name="title_activity_categoria2">Categoria2Activity</string>
    <string name="escolherCorp">Escolher</string>
    <string name="adicionarCorp">Adicionar</string>
    <string name="editarCorp">Editar</string>
    <string name="eliminarCorp">Eliminar</string>
    <string name="title_activity_escolher2">Escolher2Activity</string>
    <string name="title_activity_adicionar2">Adicionar2Activity</string>
    <string name="title_activity_editar2">Editar2Activity</string>
    <string name="title_activity_eliminar2">Eliminar2Activity</string>
    <string name="cancelarCorp">Cancelar</string>
    <string name="avancarCorp">Avançar</string>
    <string name="escolher_categoriaCorp">Escolher Exercício</string>
    <string name="eliminarElimCorp">Eliminar</string>
    <string name="cancelarElimCorp">Cancelar</string>
    <string name="editarEditCorp">Editar</string>
    <string name="cancelarEditCorp">Cancelar</string>
    <string name="guardarCorp">Guardar</string>
    <string name="cancelarAddCorp">cancelar</string>


</resources>
