<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSec"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Categoria1Activity"
    tools:showIn="@layout/activity_categoria1">


    <TextView
        android:id="@+id/textViewSelecionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/selecionar"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="553dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelecionar">

        <Button
            android:id="@+id/buttonEscolherPern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EscolherPern"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/buttonAdicionarPern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionarPern"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/buttonEditarPern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarPern"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/buttonEliminarPern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminarPern"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>